--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "serverless": "^3.38.0",
     "serverless-dotenv-plugin": "^6.0.0",
     "serverless-offline": "^13.3.0",
+    "serverless-plugin-typescript": "^2.1.5",
     "typescript": "^5.3.0"
   }
 }
