--- a/serverless.yml
+++ b/serverless.yml
@@ -136,5 +136,6 @@ resources:
           WriteCapacityUnits: 1
 
 plugins:
+  - serverless-plugin-typescript
   - serverless-dotenv-plugin
   - serverless-offline
