--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "deploy": "serverless deploy",
     "dev": "serverless offline",
-    "test": "jest"
+    "version": "serverless --version"
   },
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.658.1",
@@ -21,13 +21,11 @@
   },
   "devDependencies": {
     "@types/aws-lambda": "^8.10.145",
-    "@types/jest": "^29.5.8",
     "@types/node": "^20.10.0",
     "@types/uuid": "^9.0.7",
-    "jest": "^29.7.0",
-    "serverless": "^3.38.0",
+    "serverless": "^4.23.0",
     "serverless-dotenv-plugin": "^6.0.0",
-    "serverless-offline": "^13.3.0",
+    "serverless-offline": "^14.4.0",
     "serverless-plugin-typescript": "^2.1.5",
     "typescript": "^5.3.0"
   }
