--- a/serverless.yml
+++ b/serverless.yml
@@ -28,6 +28,7 @@ functions:
     handler: src/handler.api
     name: ${self:service}-API
     timeout: 60
+    reservedConcurrency: 0
     url:
       cors: true
 
