--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,37 +1,18 @@
 {
   "compilerOptions": {
-    /* Set the JavaScript language version for emitted JavaScript and include compatible library declarations. */
     "target": "ES2020",
-    /* Specify a set of bundled library declaration files that describe the target runtime environment. */
     "lib": ["ES2020"],
-
-    /* Specify what module code is generated. */
     "module": "commonjs",
     "moduleResolution": "node",
-    /* Enable importing .json files */
     "resolveJsonModule": true,
-
-    /* Allow JavaScript files to be a part of your program. Use the `checkJS` option to get errors from these files. */
-    "allowJs": true,
-    /* Enable error reporting in type-checked JavaScript files. */
+    "allowJs": false,
     "checkJs": false,
-
-    /* Specify the output directory for compiled files. */
     "outDir": "./dist",
-    /* Specify the root directory of input files. */
     "rootDir": "./src",
-
-    /* Ensure that each file can be safely transpiled without relying on other imports. */
     "isolatedModules": true,
-    /* Allow 'import x from y' when a module doesn't have a default export. */
     "allowSyntheticDefaultImports": true,
-    /* Ensure that casing is correct in imports. */
     "forceConsistentCasingInFileNames": true,
-
-    /* Enable all strict type-checking options. */
     "strict": true,
-
-    /* Skip type checking all .d.ts files. */
     "skipLibCheck": true,
     "baseUrl": ".",
     "paths": {
