--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "install": "npm install --legacy-peer-deps",
-    "predeploy": "npm run prettier && npm run lint && npm run tsc",
+    "clean": "rm -rf .build/ .serverless/",
+    "predeploy": "npm run clean && npm run prettier && npm run lint && npm run tsc",
     "deploy": "serverless deploy",
     "dev": "serverless offline",
     "prettier": "prettier --write .",
